background pattern visibility fix

--- a/src/index.css
+++ b/src/index.css
@@ -112,9 +112,9 @@
 .main-section {
   background: 
   linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.85)),
-  /* linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.85)),
-  linear-gradient(to top, transparent, rgba(0, 0, 0, 0.3)), */
-  url('.\assets\backgroundsvg.svg');
+  linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.85)),
+  linear-gradient(to top, transparent, rgba(0, 0, 0, 0.3)),
+  url('./assets/backgroundsvg.svg');
 }
 
 .hero-text {
